--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h5>Spróbuj i zobacz, czy to coś dla Ciebie</h5>
           <p>Wiele dziewczyn uważa, że kodowanie to męskie zajęcie. Zupełnie bezpodstawnie!</p>
           <p class="more">Każdy powinien móc spróbować programowania, żeby zdecydować, czy to coś, co mu się podoba. Wystarczy zacząć!</p>
-          <button class="btn btn-default read-more">więcej<span class="glyphicon glyphicon-chevron-down"></span></button>
+          <button class="btn btn-default read-more">więcej<span class="glyphicon glyphicon-chevron-up"></span></button>
         </section>
         <section class="col-sm-4">
           <span class="circle education glyphicon glyphicon-education"></span>
